--- a/Exemplo 1/index.html
+++ b/Exemplo 1/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/game-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Tic-Tac-Toe</title>
+    <title>React Essentials</title>
   </head>
   <body>
     <div id="root"></div>
